--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ matplotlib==3.9.0
 mdurl==0.1.2
 multiprocess==0.70.16
 narwhals==1.16.0
-numpy==1.24.4  # Downgraded for compatibility
+numpy==2.0.0
 numpy-stl==1.4.2
 outcome==1.3.0.post0
 packaging==24.1
@@ -54,6 +54,13 @@ pydeck==0.9.1
 PyExecJS==1.5.1
 Pygments==2.18.0
 pyparsing==3.1.2
+pypiwin32==223
+PySocks==1.7.1
+pyTelegramBotAPI==4.19.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-utils==3.8.2
+pyttsx3==2.90
 pytz==2024.2
 referencing==0.35.1
 requests==2.32.3
