--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ python-dotenv==1.0.1
 python-utils==3.8.2
 pyttsx3==2.90
 pytz==2024.2
+pywin32==305
 referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
